fixed spacing on about section

--- a/app/sass/pages/_index.scss
+++ b/app/sass/pages/_index.scss
@@ -76,12 +76,16 @@ section.about {
 	@include bodyfont;
 	margin:0 0.5rem 10rem 0.5rem;
 	background:white;
-	padding:2rem 0 2rem;
+	padding:2rem;
 	box-shadow:-2px -2px 3px rgba(#000, 0.1);
 	@include bradius;
+	@include media($mobile) {
+		padding:3rem;
+	}
 	@include media($desktop) {
 		@include outer-container;
 		margin-bottom:10rem;
+		padding:4rem;
 	}
 	h2 {
 		font-family:$heading-font;
@@ -89,16 +93,14 @@ section.about {
 		margin:0;
 		margin-bottom:1rem;
 	}
-	.about-about, .about-technologies {
-		padding:2rem;
-		@include media($mobile) {
-			padding:2rem 3rem;
-		}
-		@include media($tablet) {
-			padding:2rem 5rem;
-		}
-	}
 	.about-about {
+		padding-bottom:2rem;
+		border-bottom:1px dotted;
+		@include media($desktop) {
+			border-bottom:0;
+			padding-bottom:0;
+			padding-right:4rem;
+		}
 		p {
 			margin:0;
 			font-size:0.8em;
@@ -109,8 +111,11 @@ section.about {
 		}
 	}
 	.about-technologies {
+		padding-top:2rem;
 		@include media($desktop) {
 			border-left:1px dotted;
+			padding-top:0;
+			padding-left:4rem;
 		}
 		ul {
 			padding:0;
